--- a/src/samples/FullScreen.mxml
+++ b/src/samples/FullScreen.mxml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark">
+<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+     paddingTop="20" paddingLeft="20" paddingRight="20">
+
+  <fx:Script>
+    import spark.components.View;
+  </fx:Script>
 
 	<s:addedToStage>
 		<![CDATA[
@@ -27,4 +32,4 @@
 		</s:change>
 	</s:CheckBox>
 	
-</s:Group>
+</s:VGroup>
