--- a/src/samples/GestureSwipe.mxml
+++ b/src/samples/GestureSwipe.mxml
@@ -1,7 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+
+  <fx:Script>
+		import flash.events.TransformGestureEvent;
+	</fx:Script>
+
+	<s:creationComplete>
+		Multitouch.inputMode = MultitouchInputMode.GESTURE;
+
+		if (Multitouch.supportedGestures == null || Multitouch.supportedGestures.length == 0 || Multitouch.supportedGestures.indexOf(TransformGestureEvent.GESTURE_SWIPE) == -1)
+		{
+			l.text = "GESTURE_SWIPE is not supported on this device";
+			return;
+		}
+
+		addEventListener(TransformGestureEvent.GESTURE_SWIPE, function(event:TransformGestureEvent):void {
+      if (event.offsetX == 1 ) {
+        l.text = "right";
+      }
+      else if (event.offsetX == -1 ) {
+        l.text = "left";
+      }
+      else if (event.offsetY == 1) {
+        l.text = "down";
+      }
+      else if (event.offsetY == -1) {
+        l.text = "up";
+      }
+		});
+	</s:creationComplete>
+
+	<s:Label id="l" paddingTop="20" text="Swipe one finger on the screen"/>
+
 </s:Group>
