--- a/src/samples/GestureZoom.mxml
+++ b/src/samples/GestureZoom.mxml
@@ -20,8 +20,11 @@
 		}
 			
 		addEventListener(TransformGestureEvent.GESTURE_ZOOM, function(event:TransformGestureEvent):void {
-			img.scaleX *= event.scaleX;
-			img.scaleY *= event.scaleY;
+      trace("e.sx = " + event.scaleX);
+      trace("i.sx = " + img.scaleX);
+      trace("e.sy = " + event.scaleY);
+      trace("i.sy = " + img.scaleY);
+      img.transformAround(new Vector3D(event.localX, event.localY, 0), new Vector3D(img.scaleX * event.scaleX, img.scaleY * event.scaleY, 0));
 		});
 	</s:creationComplete>
 	
