--- a/src/samples/NativeCameraRoll.mxml
+++ b/src/samples/NativeCameraRoll.mxml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark">
-	
-	<s:layout>
-		<s:VerticalLayout/>
-	</s:layout>
-	
+<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+     paddingTop="10">
+
 	<s:Button label="Pick a Photo from the Roll">
 		<s:click>
 			if (CameraRoll.supportsBrowseForImage)
@@ -44,4 +41,4 @@
 	
 	<s:Image id="i" width="100%" height="100%"/>
 	
-</s:Group>
+</s:VGroup>
