--- a/src/samples/NativeCameraUI.mxml
+++ b/src/samples/NativeCameraUI.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark">
-
-	<s:layout>	<s:VerticalLayout/></s:layout>
+<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+     paddingTop="20" paddingLeft="20" paddingRight="20">
 	
 	<s:Button label="Snap photo">
 		<s:click>
@@ -22,6 +21,7 @@
 	</s:Button>
 
 	<s:Label id="l"/>
+
 	<s:Image id="i" width="100%" height="100%"/>
 	
-</s:Group>
+</s:VGroup>
