--- a/src/samples/RawCamera.mxml
+++ b/src/samples/RawCamera.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
+<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 xmlns:mx="library://ns.adobe.com/flex/mx">
+		 xmlns:mx="library://ns.adobe.com/flex/mx"
+        paddingTop="10">
 	
 	<s:creationComplete>
 		if (Camera.isSupported)
@@ -18,7 +19,7 @@
 		}
 	</s:creationComplete>
 	
-	<s:Label id="l"/>
+	<s:Label id="l" text="Camera orientation not accounted for!"/>
 	<mx:UIComponent id="uic" width="100%" height="100%"/>
 	
-</s:Group>
+</s:VGroup>
