--- a/src/samples/RotateScreen.mxml
+++ b/src/samples/RotateScreen.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		  xmlns:s="library://ns.adobe.com/flex/spark">
+		  xmlns:s="library://ns.adobe.com/flex/spark"
+        paddingTop="20" paddingLeft="20" paddingRight="20">
 	
 	<fx:Script>
 		[Bindable] private var l:String;
@@ -14,11 +15,13 @@
 	</s:addedToStage>
 	
 	<s:Label text="{l}"/>
+  
 	<s:Button label="go landscape">
 		<s:click>
 			stage.setAspectRatio(StageAspectRatio.LANDSCAPE);
 		</s:click>
 	</s:Button>
+
 	<s:Button label="go portrait">
 		<s:click>
 			stage.setAspectRatio(StageAspectRatio.PORTRAIT);
