--- a/src/samples/SimpleAccelerometer.mxml
+++ b/src/samples/SimpleAccelerometer.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark">
+<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+        paddingTop="20" paddingLeft="20" paddingRight="20">
 	
 	<fx:Script>
 		import flash.sensors.Accelerometer;
@@ -25,4 +26,4 @@
 	
 	<s:Label id="l"/>
 	
-</s:Group>
+</s:VGroup>
