--- a/src/TourDeMobileFlex.mxml
+++ b/src/TourDeMobileFlex.mxml
@@ -2,7 +2,7 @@
 <s:MobileApplication xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					 xmlns:s="library://ns.adobe.com/flex/spark"
 					 firstView="views.SampleListView"
-					 splashScreenImage="@Embed('icons/header_logo.png')">
+					 splashScreenImage="@Embed('icons/tdfsplash.png')">
 	
 	<fx:Script>
 			import views.SampleView;
@@ -25,9 +25,24 @@
 	
 	<fx:Style>
 		@namespace s "library://ns.adobe.com/flex/spark";
-		
-		s|Label {
-			padding-left: 20;
+
+    global
+    {
+      fontSize: 20px;
+    }
+
+    s|List
+    {
+      fontSize: 26px;
+    }
+
+    s|ColumnHeaderBar
+    {
+      fontSize: 16px;
+    }
+
+    s|Label
+    {
 			font-size: 26px;
 		}
 	</fx:Style>
