--- a/src/views/SampleListView.mxml
+++ b/src/views/SampleListView.mxml
@@ -12,7 +12,7 @@
 			[Embed(source="/icons/header_logo.png")] private var headerLogo:Class;
 	</fx:Script>
 	
-	<s:viewActivate>
+	<s:add>
 		l.dataProvider = new ArrayList((Model.getInstance().currentItem as SampleCategory).samples);
 		if (Model.getInstance().currentItem == Model.getInstance().samples)
 		{
@@ -43,9 +43,9 @@
 		
 			actionContent = [];
 		}
-	</s:viewActivate>
+	</s:add>
 	
-	<s:List id="l" width="100%" height="100%" labelField="name">
+	<s:List id="l" width="100%" height="100%">
 		<s:change>
 			Model.getInstance().currentItem = l.selectedItem;
 			
@@ -58,6 +58,11 @@
 				navigator.pushView(SampleView);
 			}
 		</s:change>
+    <s:itemRenderer>
+      <fx:Component>
+        <s:MobileIconItemRenderer width="100%" height="68" labelField="name" iconField="icon" iconHeight="48" iconWidth="48"/>
+      </fx:Component>
+    </s:itemRenderer>
 	</s:List>
 	
 </s:View>
