--- a/src/views/SampleView.mxml
+++ b/src/views/SampleView.mxml
@@ -3,9 +3,9 @@
 		xmlns:s="library://ns.adobe.com/flex/spark">
 	
 	<fx:Script>
-			import spark.components.Group;
+		import spark.components.Group;
 		
-		
+		protected var actualSample:Group;
 	</fx:Script>
 	
 	<s:navigationContent>
@@ -25,14 +25,21 @@
 		</s:Button>
 	</s:actionContent>
 	
-	<s:viewActivate>
+	<s:add>
 		title = Model.getInstance().currentItem.name;
 
 		var c:Class = Model.getInstance().currentItem.resource;
-		var actualSample:Group = new c();
+		actualSample = new c();
 		actualSample.percentWidth = 100;
 		actualSample.percentHeight = 100;
 		addElement(actualSample);
-	</s:viewActivate>
+	</s:add>
+
+  <s:remove>
+    if (actualSample != null)
+    {
+		  removeElement(actualSample);
+    }
+	</s:remove>
 	
 </s:View>
