--- a/src/views/AboutView.mxml
+++ b/src/views/AboutView.mxml
@@ -12,21 +12,25 @@
 		<s:Button label="Back" click="navigator.popView()"/>
 	</s:navigationContent>
 
-	<s:layout>
-		<s:VerticalLayout paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10"/>	
-	</s:layout>
-	
-	<s:Label text="Learn more about Tour de Flex:"/>
-	<s:Button label="flex.org/tour" click="navigateToURL(new URLRequest('http://flex.org/tour'))" width="300"/>
-	
-	<mx:Spacer height="10"/>
-	
-	<s:Label text="Developed by:"/>
-	<s:Button label="Greg Wilson" click="navigateToURL(new URLRequest('http://gregsramblings.com'))" width="300"/>
-	<s:Button label="Christophe Coenraets" click="navigateToURL(new URLRequest('http://coenraets.org'))" width="300"/>
-	<s:Button label="James Ward" click="navigateToURL(new URLRequest('http://jamesward.com'))" width="300"/>
-
-	<mx:Spacer height="10"/>
-	<s:Label text="©2010 Adobe Systems Incorporated. All rights reserved. The Adobe logo and Flex are registered trademarks of Adobe Systems Incorporated in the United States and/or other countries." width="100%"/>			
+	<s:Scroller width="100%" height="100%">
+		<s:VGroup paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">			
+			<s:Label text="Learn more about Tour de Flex:"/>
+			<s:Button label="flex.org/tour" click="navigateToURL(new URLRequest('http://flex.org/tour'))" width="300"/>
+			
+			<mx:Spacer height="10"/>
+			
+			<s:Label text="Developed by:"/>
+			
+			<s:TileGroup id="tg" width="100%" height="{tg.rowCount * (tg.rowHeight + tg.verticalGap)}">
+				<s:Button label="James Ward" click="navigateToURL(new URLRequest('http://jamesward.com'))" width="300"/>
+				<s:Button label="Christophe Coenraets" click="navigateToURL(new URLRequest('http://coenraets.org'))" width="300"/>
+				<s:Button label="Michaël CHAIZE" click="navigateToURL(new URLRequest('http://riagora.com'))" width="300"/>
+				<s:Button label="Greg Wilson" click="navigateToURL(new URLRequest('http://gregsramblings.com'))" width="300"/>
+			</s:TileGroup>
+			
+			<mx:Spacer height="10"/>
+			<s:Label text="©2010 Adobe Systems Incorporated. All rights reserved. The Adobe logo and Flex are registered trademarks of Adobe Systems Incorporated in the United States and/or other countries." width="100%"/>			
+		</s:VGroup>
+	</s:Scroller>
 	
 </s:View>
