--- a/src/samples/RotateScreen.mxml
+++ b/src/samples/RotateScreen.mxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-        paddingTop="20" paddingLeft="20" paddingRight="20">
+          paddingTop="20" paddingLeft="20" paddingRight="20">
 	
 	<fx:Script>
 		[Bindable] private var l:String;
 	</fx:Script>
+	
+	<s:states>
+		<s:State name="landscape"/>
+		<s:State name="portrait"/>
+	</s:states>
 	
 	<s:addedToStage>
 		l = "Device Orientation = " + stage.deviceOrientation;
