--- a/src/views/SampleListView.mxml
+++ b/src/views/SampleListView.mxml
@@ -14,6 +14,7 @@
 	
 	<s:add>
 		l.dataProvider = new ArrayList((Model.getInstance().currentItem as SampleCategory).samples);
+		
 		if (Model.getInstance().currentItem == Model.getInstance().samples)
 		{
 			var bi:BitmapImage = new BitmapImage();
@@ -36,16 +37,27 @@
 				dispatchEvent(ke);
 			});
 			navigationContent = [bb];
-		
-			var tl:Label = new Label();
-			tl.text = Model.getInstance().currentItem.name;
-			titleContent = [tl]; 
+
+			title = Model.getInstance().currentItem.name;
 		
 			actionContent = [];
 		}
 	</s:add>
 	
+	<s:viewDeactivate>
+		// save the scroll position for the current sample
+		Model.getInstance().sampleListScrollPositions[(l.dataProvider as ArrayList).source] = l.layout.verticalScrollPosition;
+	</s:viewDeactivate>
+	
 	<s:List id="l" width="100%" height="100%">
+		<s:updateComplete>
+			// restore the scroll position
+			if (Model.getInstance().sampleListScrollPositions[(l.dataProvider as ArrayList).source] != undefined)
+			{
+				l.layout.verticalScrollPosition = Model.getInstance().sampleListScrollPositions[(l.dataProvider as ArrayList).source];
+				delete Model.getInstance().sampleListScrollPositions[(l.dataProvider as ArrayList).source];
+			}
+		</s:updateComplete>
 		<s:change>
 			Model.getInstance().currentItem = l.selectedItem;
 			
@@ -58,11 +70,11 @@
 				navigator.pushView(SampleView);
 			}
 		</s:change>
-    <s:itemRenderer>
-      <fx:Component>
-        <s:MobileIconItemRenderer width="100%" height="68" labelField="name" iconField="icon" iconHeight="48" iconWidth="48"/>
-      </fx:Component>
-    </s:itemRenderer>
+	    <s:itemRenderer>
+	      <fx:Component>
+	        <s:MobileIconItemRenderer width="100%" height="68" labelField="name" iconField="icon" iconHeight="48" iconWidth="48"/>
+	      </fx:Component>
+	    </s:itemRenderer>
 	</s:List>
 	
 </s:View>
