--- a/src/samples/SimpleIconItemRenderer.mxml
+++ b/src/samples/SimpleIconItemRenderer.mxml
@@ -1,10 +1,6 @@
 <?xml version="1.0"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
 
-  <fx:Declarations>
-
-  </fx:Declarations>
-
   <s:List width="100%" height="100%">
     <s:dataProvider>
       <s:ArrayCollection>
@@ -21,14 +17,14 @@
     </s:dataProvider>
     <s:itemRenderer>
       <fx:Component>
-        <s:MobileIconItemRenderer height="120" labelField="name" iconField="photo" iconHeight="100" iconWidth="100" messageFunction="getMessage" decoratorClass="@Embed('icons/twitter_icon_50.png')">
+        <s:IconItemRenderer height="120" labelField="name" iconField="photo" iconHeight="100" iconWidth="100" messageFunction="getMessage" decorator="@Embed('icons/twitter_icon_50.png')">
           <fx:Script>
             protected function getMessage(o:Object):String
             {
               return "@" + o.thandle + " " + o.location;
             }
           </fx:Script>
-        </s:MobileIconItemRenderer>
+        </s:IconItemRenderer>
       </fx:Component>
     </s:itemRenderer>
     <s:change>
