--- a/src/samples/SimpleLabelItemRenderer.mxml
+++ b/src/samples/SimpleLabelItemRenderer.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
-
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark">
+	
 	<s:List width="100%" height="100%">
 		<s:dataProvider>
 			<s:ArrayList>
@@ -18,18 +19,18 @@
 				<fx:Object label="Port"/>
 			</s:ArrayList>
 		</s:dataProvider>
-    <s:itemRenderer>
-      <fx:Component>
-        <s:MobileItemRenderer>
-          <fx:Script>
-            override public function set data(value:Object):void
-            {
-              label = (value.label as String).toUpperCase();
-            }
-            </fx:Script>
-        </s:MobileItemRenderer>
-      </fx:Component>
-    </s:itemRenderer>
+		<s:itemRenderer>
+			<fx:Component>
+				<s:LabelItemRenderer>
+					<fx:Script>
+						override public function set data(value:Object):void
+						{
+							label = (value.label as String).toUpperCase();
+						}
+					</fx:Script>
+				</s:LabelItemRenderer>
+			</fx:Component>
+		</s:itemRenderer>
 	</s:List>
-
+	
 </s:Group>
